Fix keyboard guide overlay UI inconsistency
This corrects the positioning of the “X” close icon, which was offset
substantially from the underlying box. I’ve only tested this on Chrome,
Firefox, and Safari on Mac OS X. It was broken on all of them, and now
it works on all of them. Per #471.

--- a/htdocs/themes/StateDecoded2013/static/scss/components/_keyboard-shortcuts.scss
+++ b/htdocs/themes/StateDecoded2013/static/scss/components/_keyboard-shortcuts.scss
@@ -76,11 +76,11 @@ section#sidebar section#keyboard-guide {
 .ui-icon-closethick {
   display: inline-block;
   float: right;
-  margin-right: -15px;
-  margin-top: -5px;
+  margin-right: -1px;
+  margin-top: -1px;
   font-size: 0.8em;
   background-color: #ddd;
-  padding: 1px 10px;
+  padding: 1px 5px;
 }
   .ui-icon-closethick:hover,
   .ui-icon-closethick:active {
